# fight_tracker

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  dev-requirements.in  pyproject.toml  requirements.in  setup.py
examples/: test_conditions.py  test_event.py
fight_tracker/: TODO.md  __init__.py  ability.py  arithmetic.py  concept.py  creature.py  damage.py  dice.py  encounter.py  launcher.py  narrator.py  statblock.py  typing.py  util.py
fight_tracker/backend/: ipython_rendering.py
fight_tracker/bestiary/: __init__.py  beast.py  kobold.py  misc_humanoids.py  npc.py  other_humanoids.py  undead.py
fight_tracker/events/: __init__.py  attacks.py  base.py  conditions.py  creature.py  encounter.py  event.py  logger.py
fight_tracker/mechanics/: __init__.py  ability.py  conditions.py  damage.py  misc.py  race.py  sense.py  speed.py
fight_tracker/rendering/: __init__.py  card.py  misc.py  narrator.py  renderer.py  statblock.py  table.py  tree.py
fight_tracker/rendering/stream_renderer/: renderer.py  util.py
notebooks/: bestiary.ipynb  example.ipynb  example_statblock.ipynb  session_2024-01-07.ipynb
tests/: test_dice.py  test_distance.py  test_dryrun.py  test_statblock.py  test_stream_renderer.py
