[tool.poetry]
name = "fight-tracker"
version = "0.1.0"
description = "A CLI for tracking fight in DnD 5e"
authors = ["Jean-Michel Begon <jm.begon@gmail.com>"]
license = "BSD3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.27.1"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"
pytest = "^7.4.3"
ipython = "^8.18.1"
pre-commit = "^3.5.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
